feat: add browserSync cinfig

--- a/weui/weui_demo/style/main.less
+++ b/weui/weui_demo/style/main.less
@@ -214,8 +214,6 @@
 /*
 * weui-button__submit
 **/
-
-
 :root {
     --button__submit: #3CC51F;
     --button__font: 14px;
@@ -226,6 +224,9 @@
     height: 40px;
     line-height: 40px;
     text-align: center;
+    color: #fff;
+    border:none;
+    background: #ccc;
     background: var(--button__submit);
     font-size: var(--button__font);
 }
