--- a/weui/weui_demo/style/main.less
+++ b/weui/weui_demo/style/main.less
@@ -101,7 +101,7 @@
     font-size: 14px;
 
     & + .weui-cells {
-        margin-top: 0;
+        margin-top: 20px;
     }
 }
 
@@ -143,7 +143,6 @@
 * radio
 **/
 .weui-check {
-
     .weui-cells_radio & {
         &:checked {
             & + .weui-icon-checked {
@@ -253,9 +252,7 @@
 
 
 
-/*
-* weui-button__submit
-**/
+
 :root {
     --button__submit: #3CC51F;
     --button__font: 14px;
